<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383838"
    tools:context="com.edgarchipeta.calculator.MainActivity">

    <TextView
        android:id="@+id/ResultsTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputTextView"
        app:layout_constraintVertical_bias="0.164"
        tools:layout_width="0dp" />

    <TextView
        android:id="@+id/InputTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_width="0dp" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="#383838"
        tools:layout_width="wrap_content">

        <Button
            android:id="@+id/clrBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="center|fill"
            android:layout_row="4"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/seven"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/eight"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/nine"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/four"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/five"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/six"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/divBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/divide"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/one"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/two"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/three"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/mulBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/multiply"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/decBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/decimal"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/equalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/equal"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/subBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/sub"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:background="#4f4f51" />
    </GridLayout>


</android.support.constraint.ConstraintLayout>
